--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-tooltip": "^1.2.4",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.42.0",
+    "lucide-react": "^0.503.0",
     "mysql2": "^3.14.0",
     "next": "15.3.1",
     "node-cron": "^3.0.3",
     "playwright": "^1.52.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -30,6 +35,7 @@
     "eslint-config-next": "15.3.1",
     "tailwindcss": "^4",
     "tsx": "^4.19.3",
+    "tw-animate-css": "^1.2.8",
     "typescript": "^5"
   }
 }
